2007-10-14  Yannig Marchegay  <yannig@marchegay.org>

	* configure.ac: Added 'oc' to ALL_LINGUAS.

2007-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	2.20 release
	
	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	Darken selected_bg

2007-09-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	Changed tooltip color

2007-09-11  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	Changed base text color

2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	Bump version to 2.19.92
	
	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	Use uncolorized scrollbars

2007-08-20  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	Updated

2007-08-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* icon-themes/Gion/16x16/Makefile.am:
	* icon-themes/Gion/16x16/devices/Makefile.am:
	* icon-themes/Gion/16x16/mimetypes/Makefile.am:
	Added more 16x16 mipetypes and devices icons

2007-07-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* Makefile.am:
	* NEWS:
	* configure.ac:
	* icon-themes/Foxtrot/Makefile.am:
	* icon-themes/Gion/Makefile.am:
	* icon-themes/Neu/Makefile.am:
	Updated Makefile.am to fix make distcheck

2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* AUTHORS:
	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* configure.in:
	* desktop-themes/Darklooks/Makefile.am:
	* desktop-themes/Darklooks/index.theme.in:
	* desktop-themes/Makefile.am:
	* gnome-themes-extras.spec.in:
	* gtk-themes/Darklooks/Makefile.am:
	* gtk-themes/Darklooks/gtk-2.0/Makefile.am:
	* gtk-themes/Darklooks/gtk-2.0/gtkrc:
	* gtk-themes/Makefile.am:
	Added Darklooks gtk theme
	Moved to configure.ac

2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* icon-themes/Foxtrot/AUTHORS:
	Added AUTHORS file to Foxtrot

2007-07-30  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* AUTHORS:
	* NEWS:
	* configure.in:
	* icon-themes/Foxtrot/16x16/Makefile.am: