@@ -1,9 +1,2 @@
-Andrea Cimitan <andrea.cimitan@gmail.com>
-  Darklooks Gtk Theme
-
-Andreasn Nilsson <nisses.mail@home.se>
-  Foxtrot Icon Theme
-
-Silvestre Herrera <silvestre.herrera@gmail.com>
-  Gion Icon Theme
-  Dropline Neu! Icon Theme
+For all authors of a given theme please see the AUTHORS file in each theme
+directory
