@@ -1,1 +1,12 @@
+The included themes are released under the following licenses:
 
+desktop-themes/Darklooks: GPL2+
+gtk-themes/Darklooks:     GPL2+
+icon-themes/Foxtrott:     CC-BY-SA
+icon-themes/Gion:         GPL2
+icon-themes/Neu:          GPL2
+
+A full copy of the GNU General Public License version 2 can be found in
+COPYING.GPL2,
+a full copy of the Creative Commons Attribution Share-Alike license version
+2.5 can be found in COPYING.CCBYSA25.
