@@ -1,7 +1,7 @@
 [Desktop Entry]
-Name=Darklooks
+_Name=Darklooks
 Type=X-GNOME-Metatheme
-Comment=A dark Clearlooks theme
+_Comment=A dark Clearlooks theme
 Encoding=UTF-8
 
 [X-GNOME-Metatheme]
