@@ -1,0 +1,4 @@
+desktop-themes/Darklooks/index.theme.in
+icon-themes/Foxtrot/index.theme.in
+icon-themes/Gion/index.theme.in
+icon-themes/Neu/index.theme.in
